# hybrid-hopfield-network

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  pyproject.toml
config/: config.yaml
src/: hybrid_hopfield_network.py  train.py
src/data/: data_loader.py
src/models/: hybrid_hopfield_layer.py  hybrid_hopfield_network.py  modern_hopfield_network.py
src/utils/: metrics.py  visualization.py
tests/: test_data_loader.py  test_hybrid_hopfield_layer.py  test_hybrid_hopfield_network.py
