[tool.poetry]
name = "hybrid-hopfield-network"
version = "0.1.0"
description = ""
authors = ["Uday Phalak <udayphlk@gmail.com>"]
readme = "README.md"
packages = [{include = "hybrid_hopfield_network"}]

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^2.0.0"
pandas = "^2.2.2"
scikit-learn = "^1.5.1"
matplotlib = "^3.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
black = "^24.4.2"
ruff = "^0.5.1"
mkdocs = "^1.6.0"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'

[tool.ruff]
select = ["E", "F", "I"]
ignore = []
line-length = 88
target-version = "py311"
